--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,13 @@ pretty_env_logger = "0.5.0"
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-util = { version = "0.7.16", features = ["full"] }
 tower = { version = "0.5.2", features = ["full"] }
-tokio-metrics = { version = "0.4.5", features = ["rt"] }
 hyper-util = { version = "0.1.17", features = ["client", "client-legacy", "http1", "http2", "service", "tokio"] }
 http-body-util = "0.1.3"
 anyhow = "1.0.100"
 reqwest = "0.12.23"
 atomic-time = "0.1.5"
+scopeguard = "1.2.0"
+crossterm = "0.28"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = { version = "0.6" }
@@ -36,5 +37,4 @@ codegen-units = 1
 lto = true
 
 [features]
-tokio_metrics = []
 orion_client = []
