--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,34 @@
 [package]
 name = "plumbrs"
-version = "0.5.2"
+version = "0.5.3"
 edition = "2024"
+authors = ["Nicola Bonelli <nicola@larthia.com>"]
+description = "A high-performance HTTP/1.1 and HTTP/2 benchmarking tool"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/awgn/plumbrs"
+readme = "README.md"
+keywords = ["cli", "utility", "benchmark", "http", "http2"]
+categories = ["command-line-utilities", "network-programming"]
 
 [patch.crates-io]
 hyper-util   = { git = "https://github.com/awgn/hyper-util.git", rev = "76db6ec" }
 
 [dependencies]
-bytes = "1.5.0"
-clap = { version = "4.4.5", features = ["derive"] }
+bytes = "1.11.0"
+clap = { version = "4.5.53", features = ["derive"] }
 futures = "0.3.31"
 h2 = "0.4.12"
 http = "1.3.1"
 httparse = "1.10.1"
-hyper = { version = "1.7.0", features = ["full"] }
+hyper = { version = "1.8.1", features = ["full"] }
 pretty_env_logger = "0.5.0"
-tokio = { version = "1.47.1", features = ["full"] }
-tokio-util = { version = "0.7.16", features = ["full"] }
+tokio = { version = "1.48.0", features = ["full"] }
+tokio-util = { version = "0.7.17", features = ["full"] }
 tower = { version = "0.5.2", features = ["full"] }
-hyper-util = { version = "0.1.17", features = ["client", "client-legacy", "http1", "http2", "service", "tokio"] }
+hyper-util = { version = "0.1.18", features = ["client", "client-legacy", "http1", "http2", "service", "tokio"] }
 http-body-util = "0.1.3"
 anyhow = "1.0.100"
-reqwest = "0.12.23"
+reqwest = "0.12.24"
 atomic-time = "0.1.5"
 scopeguard = "1.2.0"
 crossterm = "0.28"
@@ -37,6 +44,3 @@ opt-level = 3
 strip = true
 codegen-units = 1
 lto = true
-
-[features]
-orion_client = []
