--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ crossterm = "0.28"
 hdrhistogram = "7.5.4"
 futures-util = "0.3.31"
 tabled = "0.18"
+http_wire = "0.1.1"
 [target.'cfg(target_os = "linux")'.dependencies]
 tokio-uring = { version = "0.5.0", optional = true }
 
