--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ hdrhistogram = "7.5.4"
 futures-util = "0.3.31"
 tabled = "0.18"
 http_wire = "0.2.2"
+ctor = "0.6.3"
 [target.'cfg(target_os = "linux")'.dependencies]
 tokio-uring = { version = "0.5.0", optional = true }
 
