--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,8 @@ tower = { version = "0.5.2", features = ["full"] }
 hyper-util = { version = "0.1.18", features = ["client", "client-legacy", "http1", "http2", "service", "tokio"] }
 http-body-util = "0.1.3"
 anyhow = "1.0.100"
-reqwest = "0.12.24"
+reqwest = { version = "0.12.24", features = ["stream"] }
+rmcp = { version = "0.12.0", optional = true }
 atomic-time = "0.1.5"
 scopeguard = "1.2.0"
 crossterm = "0.28"
@@ -45,6 +46,7 @@ unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
 
 [features]
 io_uring = ["tokio-uring"]
+mcp = ["rmcp"]
 
 [profile.release]
 debug = false
