--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ futures-util = "0.3.31"
 tabled = "0.18"
 http_wire = "0.2.2"
 ctor = "0.6.3"
+const_format = "0.2.35"
 [target.'cfg(target_os = "linux")'.dependencies]
 tokio-uring = { version = "0.5.0", optional = true }
 
